# serializer version: 1
# name: test_discovery_flow_during_onboarding
  FlowResultSnapshot({
    'context': dict({
      'source': 'zeroconf',
      'unique_id': 'HWE-P1_5c2fafabcdef',
    }),
    'data': dict({
      'ip_address': '127.0.0.1',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'homewizard',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'ip_address': '127.0.0.1',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'homewizard',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'zeroconf',
      'title': 'P1 meter',
      'unique_id': 'HWE-P1_5c2fafabcdef',
      'version': 1,
    }),
    'title': 'P1 meter',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_discovery_flow_during_onboarding_disabled_api
  FlowResultSnapshot({
    'context': dict({
      'confirm_only': True,
      'source': 'zeroconf',
      'title_placeholders': dict({
        'name': 'P1 meter',
      }),
      'unique_id': 'HWE-P1_5c2fafabcdef',
    }),
    'data': dict({
      'ip_address': '127.0.0.1',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'homewizard',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'ip_address': '127.0.0.1',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'homewizard',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'zeroconf',
      'title': 'P1 meter',
      'unique_id': 'HWE-P1_5c2fafabcdef',
      'version': 1,
    }),
    'title': 'P1 meter',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_discovery_flow_works
  FlowResultSnapshot({
    'context': dict({
      'confirm_only': True,
      'source': 'zeroconf',
      'title_placeholders': dict({
        'name': 'Energy Socket (5c2fafabcdef)',
      }),
      'unique_id': 'HWE-SKT_5c2fafabcdef',
    }),
    'data': dict({
      'ip_address': '127.0.0.1',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'homewizard',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'ip_address': '127.0.0.1',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'homewizard',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'zeroconf',
      'title': 'Energy Socket',
      'unique_id': 'HWE-SKT_5c2fafabcdef',
      'version': 1,
    }),
    'title': 'Energy Socket',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_manual_flow_works
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': "<AsyncMock name='HomeWizardEnergyV1().device().product_type' id='4443413760'>_<AsyncMock name='HomeWizardEnergyV1().device().serial' id='4444163440'>",
    }),
    'data': dict({
      'ip_address': '2.2.2.2',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'homewizard',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'ip_address': '2.2.2.2',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'homewizard',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'title': "<AsyncMock name='HomeWizardEnergyV1().device().product_name' id='4432227472'>",
      'unique_id': "<AsyncMock name='HomeWizardEnergyV1().device().product_type' id='4443413760'>_<AsyncMock name='HomeWizardEnergyV1().device().serial' id='4444163440'>",
      'version': 1,
    }),
    'title': "<AsyncMock name='HomeWizardEnergyV1().device().product_name' id='4432227472'>",
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
